--- a/src/stubs/Homestead.yaml
+++ b/src/stubs/Homestead.yaml
@@ -4,18 +4,18 @@ memory: 2048
 cpus: 1
 provider: virtualbox
 
-authorize: ~/.ssh/id_rsa.pub
+authorize: ./.ssh/lbbstead.pub
 
 keys:
-    - ~/.ssh/id_rsa
+    - ./.ssh/lbbstead
 
 folders:
-    - map: ~/Code
+    - map: ./Code
       to: /home/vagrant/Code
 
 sites:
-    - map: homestead.app
-      to: /home/vagrant/Code/Laravel/public
+    - map: lbbniu.app
+      to: /home/vagrant/Code/lbbniu/public
 
 databases:
     - homestead
